PILLS - add pills to about, member zone and create readme
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/landing/contact.html.erb
+++ b/app/views/landing/contact.html.erb
@@ -4,7 +4,7 @@
 </div>
 
 <section name="email">
-  <h3>Email</h3>
+  <h3>Active Brothers</h3>
   <dl>
     <dt>President</dt>
     <dd>Bernardo Jaramillo</dd>
