--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,4 +1,4 @@
-<img src="<%= asset_path "photos/chapter-house.jpg" %>" class="lead">
+<%= image_tag "photos/chapter-house.jpg", :class => "lead" %>
 
 <h1>Welcome Brothers and Alumni</h1>
 
