--- a/app/views/landing/rush.html.erb
+++ b/app/views/landing/rush.html.erb
@@ -1,4 +1,4 @@
-<img src="<%= asset_path "photos/coat-of-arms.jpg" %>" class="lead">
+<%= image_tag "photos/coat-of-arms.jpg", :class => "lead" %>
 
 <div class="page-header">
   <h1>Rush</h1>  
