--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -16,4 +16,4 @@
   <% end %>
 </div>
 
-<%= link_to "Back", photo_album_index_path, :class => "button" %>
+<%= link_to "Back to Photo Albums", photo_album_index_path, :class => "button" %>
