--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class="page-header">
   <% if logged_in? %>
-    <%= link_to "New Post", new_post_path, :class => "button" %>
+    <%= link_to "New Article", new_post_path, :class => "button" %>
   <% else %>
     <%= link_to "Admin Login", member_zone_path, :class => "button" %>
   <% end %>
