--- a/app/views/landing/about.html.erb
+++ b/app/views/landing/about.html.erb
@@ -1,7 +1,27 @@
 <div class="page-header">
   <h1>About Us</h1>  
-  <p>Feel free to contact the house, its officers, or the alumni board for any reason. We can currently be contacted in the following ways:</p>
+  <p>The many activities and experiences enjoyed by the active brothers of Theta Chi.</p>
 </div>
+
+<nav class="pills">
+  <ul>
+    <li data-section-name="president-message" class="active"><a>Home</a></li>
+    <li data-section-name="cal-history"><a>History at Cal</a></li>
+    <li data-section-name="national-history"><a>National History</a></li>
+    <li data-section-name="chapter-house"><a>The House</a></li>
+    <li data-section-name="brotherhood"><a>Brotherhood</a></li>
+    <li data-section-name="social"><a>Social</a></li>
+    <li data-section-name="academics"><a>Academics</a></li>
+    <li data-section-name="philanthropy"><a>Philanthropy</a></li>
+    <li data-section-name="athletics"><a>Athletics</a></li>
+  </ul>
+</nav>
+
+<section name="president-message">
+  <%= image_tag "photos/coat-of-arms.jpg", :class => "lead" %>
+  <h3>A Message from Our President</h3>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc.</p>
+</section>
 
 <section name="cal-history">
   <h3>History at Cal</h3>
