--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
           <button type="submit">Go</button>
         </form>
                 
-        <ul id="social">
+        <ul id="social-media">
           <li><%= link_to "Facebook", "https://www.facebook.com/CalThetaChi", :target => "_blank" %></li>
           <li><%= link_to "Twitter", "https://twitter.com/CalThetaChi", :target => "_blank" %></li>
           <li><%= link_to "LinkedIn", "http://www.linkedin.com/groups?gid=4940412", :target => "_blank" %></li>
@@ -48,7 +48,7 @@
       </div>
     </header>
     
-    <nav>
+    <nav id="menu">
       <ul class="container">
         <li name="home"><%= link_to "Home", root_path %></li>
         <li name="about"><%= link_to "About Us", about_us_path %></li>
