--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -40,7 +40,7 @@
   <% end %>
 </div>
 
-<%= link_to "Back", posts_path, :class => "button" %>
+<%= link_to "Back to News", posts_path, :class => "button" %>
 <% if logged_in? %>
   <%= link_to "Edit", edit_post_path, :class => "button " %>
   <%= link_to "Delete", @post, :method => :delete, :confirm => "Are you sure that you want to delete this post?", :class => "button" %>
