LINKS - minor changes
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/landing/about.html.erb
+++ b/app/views/landing/about.html.erb
@@ -8,9 +8,9 @@
     <li data-section-name="president-message" class="active"><a>Home</a></li>
     <li data-section-name="cal-history"><a>History at Cal</a></li>
     <li data-section-name="national-history"><a>National History</a></li>
-    <li data-section-name="chapter-house"><a>The House</a></li>
+    <li data-section-name="chapter-house"><a>Chapter House</a></li>
     <li data-section-name="brotherhood"><a>Brotherhood</a></li>
-    <li data-section-name="social"><a>Social</a></li>
+    <li data-section-name="social"><a>Social Events</a></li>
     <li data-section-name="academics"><a>Academics</a></li>
     <li data-section-name="philanthropy"><a>Philanthropy</a></li>
     <li data-section-name="athletics"><a>Athletics</a></li>
