--- a/app/views/member_zone/index.html.erb
+++ b/app/views/member_zone/index.html.erb
@@ -26,15 +26,15 @@
   
   <nav class="pills">
     <ul>
-      <li data-section-name="hosting-info" class="active"><a>Site Information</a></li>
+      <li data-section-name="site-info" class="active"><a>Site Information</a></li>
       <li data-section-name="articles"><a>Articles & Comments</a></li>
       <li data-section-name="posting-photos"><a>Managing Photos</a></li>
       <li data-section-name="account-logins"><a>Account Logins</a></li>
     </ul>
   </nav>
   
-  <section name="hosting-info">
-    <h3>Hosting Information</h3>
+  <section name="site-info">
+    <h3>Site Information</h3>
     <p>This site is a Ruby on Rails app, tracked by a git repository that is deployed to Heroku. The database is PostgreSQL and is also hosted on Heroku. The domain name is registered with Namecheap. All of the photo albums and photos come from Flickr.</p>
     
     <p>Login information for these services can be found in the "Account Logins" tab.</p>
