--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -24,7 +24,7 @@
     <%= f.text_area :text %>
   </div>
   <div class="actions">
-    <%= link_to "Back", posts_path, :class => "button" %>
+    <%= link_to "Back to News", posts_path, :class => "button" %>
     <%= f.submit %>
   </div>
 <% end %>
