--- a/app/views/landing/contact.html.erb
+++ b/app/views/landing/contact.html.erb
@@ -3,7 +3,7 @@
   <p>Feel free to contact the house, its officers, or the alumni board for any reason. We can currently be contacted in the following ways:</p>
 </div>
 
-<section name="email">
+<section name="actives">
   <h3>Active Brothers</h3>
   <dl>
     <dt>President</dt>
