--- a/app/views/landing/rush.html.erb
+++ b/app/views/landing/rush.html.erb
@@ -1,8 +1,16 @@
-<%= image_tag "photos/coat-of-arms.jpg", :class => "lead" %>
+<%#= image_tag "photos/coat-of-arms.jpg", :class => "lead" %>
 
 <div class="page-header">
   <h1>Rush</h1>  
   <p>Recruitment is an essential part of the Greek system and one that look forward to twice a year as an opportunity to meet future brothers.</p>
 </div>
   
-  <hr>
+<!-- <hr> -->
+
+<section name="rush">
+  <p>Rushing Theta Chi is one of the best decisions you can make as an undergraduate. Our chapter has more than doubled in membership in the last 6 years and there has never been a better time to join. We take great pride in our diversity; with brothers from many different backgrounds and majors ranging from engineering to political science, you will always have friends willing to help and support you. As a brother, you will experience a harmonious balance between academics, social life, and extracurricular activities. In fact, <%= link_to "Cal Greeks statistically have higher GPA’s than their non-Greek peers", "http://lead.berkeley.edu/greek/why_go_greek" %>. Theta Chi is one of the largest national fraternities with over 224 chapters across America including many at universities across California like UCLA, USC, Davis, and Santa Barbara.  As a Theta Chi, you will forge beneficial relationships that will benefit you for a lifetime.</p>
+  
+  <p>The official Fall 2013 rush week begins Thursday, August 29th on the first day of classes. Our schedule of events will be posted outside the house, and we encourage you to get in touch and ask for details. Those who we feel would be quality brothers will be asked to join us for our bid dinner on Friday, September 6th. Events during rush week include night time socials, barbecues and lawn activities, trips to various local hot spots, and tons of free food and drinks.</p>
+  
+  <p>We will also be holding some open house events starting on August 24th with a 9pm party to welcome new students.  Feel free to stop by during welcome week and get to know the house and the brothers. Rush is essentially two weeks jam-packed full of fun and is free to all so there is nothing to lose. Please contact us if you are interested. We look forward to meeting you, and wish you well with whatever path you take during you college experience.</p>
+</section>
