--- a/app/views/member_zone/index.html.erb
+++ b/app/views/member_zone/index.html.erb
@@ -20,6 +20,36 @@
   <p>Chapter events will be posted in the calendar below which can be synced with your computer or phone.</p>
 </section>
 
+<section name="rush-contacts">
+  <h3>Rush Contacts & Recommendations</h3>
+  <p>Chapter events will be posted in the calendar below which can be synced with your computer or phone.</p>
+  
+  <table>
+    <thead>
+      <tr>
+        <td>Name</td>
+        <td>Class</td>
+        <td>Email</td>
+        <td>Phone Number</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Jon Voight</td>
+        <td>2013</td>
+        <td>jimbeam@gmail.com</td>
+        <td>(610) 509-3896</td>
+      </tr>
+      <tr>
+        <td>Jon Voight</td>
+        <td>2013</td>
+        <td>jimbeam@gmail.com</td>
+        <td>(610) 509-3896</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
+
 <section name="readme">
   <h2>Admin Instructions</h2>
   <hr>
