--- a/app/views/posts/_comment.html.erb
+++ b/app/views/posts/_comment.html.erb
@@ -1,6 +1,6 @@
 <div class="comment">
   <%= simple_format comment.text %>
-  <p class="meta">posted by <%= comment.name %> on <%= comment.display_created_date %></p>
+  <p class="meta">posted by <%= comment.name %> on <%= comment.created_at.to_s(:blog) %></p>
   
   <% if logged_in? %>
     <%= link_to "Delete", post_comment_path(comment.post, comment), :method => :delete, :confirm => "Are you sure that you want to delete this comment?", :class => "button" %>
