--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :title %><br />
-    <%= f.text_field :title, :cols => "50" %>
+    <%= f.text_field :title %>
   </div>
   <div class="field">
     <%= f.label :author %><br />
