--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,6 @@
 <article>  
   <h3><%= link_to post.title, post_path(post) %></h3>
-  <p class="meta">posted by <%= post.author %> on <%= post.display_created_date %></p>
+  <p class="meta">posted by <%= post.author %> on <%= post.created_at.to_s(:blog) %></p>
   
   <%= simple_format post.text %>
   
