RUSH - update description and picture
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/landing/alumni.html.erb
+++ b/app/views/landing/alumni.html.erb
@@ -1,14 +1,39 @@
-<%= image_tag "photos/coat-of-arms.jpg", :class => "lead" %>
+<%= image_tag "photos/founders-day-dinner-2013.jpg", :class => "lead" %>
 
 <div class="page-header">
   <h1>Alumni</h1>  
-  <p>Recruitment is an essential part of the Greek system and one that look forward to twice a year as an opportunity to meet future brothers.</p>
+  <p>Intro with statistics and description of events with alumni.</p>
 </div>
 <hr>
 
-<ul>
-  <li>Alumni Board</li>
-  <li>Statistics</li>
-  <li>Notable alumni</li>
-  <li>Alumni events</li>
-</ul>
+<section name="alumni-chair-message">
+  <h3>A Message from the Alumni Chairman</h3>
+  <p>At Mu Chapter, we believe that the fraternity experience should extend beyond one’s college years. There are about 10 alumni for every active brother, which means that the true strength of Mu Chapter is in our alumni presence. As some of the most accomplished, connected, and generous graduates of UC Berkeley, our alumni are the crux of the brotherhood in college and beyond.</p>
+  <p>Mu Chapter is proud to have one of the strongest alumni networks in the Greek system. At Founders’ Day 2013, 48 alumni returned to enjoy dinner and drinks with the active brothers. We are fortunate to have such a high level of involvement, support, and interest.</p>
+  <p>With Mu Chapter’s Centennial approaching, both active brothers and alumni are excited to welcome a new era of success and improvement.</p>
+  <p>Fraternally,<br>
+     Luke Kim</p>
+</section>
+
+<section name="alumni-board">
+  <h3>Alumni Board</h3>
+  <p>The board blah blah blah.</p>
+  
+  <h4>Current Members</h4>
+  <dl>
+    <dt>President</dt>
+    <dd>This Guy</dd>
+    
+    <dt>Vice President</dt>
+    <dd>That Guy</dd>
+    
+    <dt>Secretary</dt>
+    <dd>Him</dd>
+    
+    <dt>Treasurer</dt>
+    <dd>Whatshisname</dd>
+    
+    <dt>House Manager</dt>
+    <dd>Boy</dd>
+  </dl>
+</section>
