ALUMNI - fix alumni board names, still missing some (?)
Signed-off-by: James Diefenderfer <jimmydief@gmail.com>

--- a/app/views/landing/alumni.html.erb
+++ b/app/views/landing/alumni.html.erb
@@ -17,23 +17,23 @@
 
 <section name="alumni-board">
   <h3>Alumni Board</h3>
-  <p>The board blah blah blah.</p>
+  <p>The alumni board owns the chapter house and meets with the undergraduate executive board monthly to help make decisions concerning the longterm direction of the house. They are an extremely valuable resource in ensuring that the chapter continues to grow and prosper.</p>
   
   <h4>Current Members</h4>
   <dl>
     <dt>President</dt>
-    <dd>This Guy</dd>
+    <dd>Erik Johannessen</dd>
     
     <dt>Vice President</dt>
-    <dd>That Guy</dd>
+    <dd>Jason Huertas</dd>
     
     <dt>Secretary</dt>
-    <dd>Him</dd>
+    <dd>William Lynn</dd>
     
     <dt>Treasurer</dt>
-    <dd>Whatshisname</dd>
+    <dd>Michael Tempero</dd>
     
     <dt>House Manager</dt>
-    <dd>Boy</dd>
+    <dd>Stan Nielson</dd>
   </dl>
 </section>
